--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
     "escape-html": "^1.0.3",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
