--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.20.2",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "escape-html": "^1.0.3",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
