--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "escape-html": "^1.0.3",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "file-saver": "^2.0.5",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
